--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,7 +1,13 @@
-Version 0.1.2   (not yet released)
+Version 0.1.3	(06 Novermber 2011)
+
+   * Bug fixes
+
+Version 0.1.2   (05 November 2011)
 
    * Forked to Manygui
-   * Port to Python 3
+   * Port to Python 3 and PyQt4
+   * Class-based events
+   * New button events (press, release, toggle)
 
 Version 0.1     (06 February 2002)
 
